--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,19 +4,15 @@
 
 @layer base {
   body {
-    @apply bg-zinc-100 text-zinc-900 dark:bg-zinc-900 dark:text-zinc-100;
+    @apply flex min-h-screen w-full flex-col bg-theme-100 text-theme-900 dark:bg-theme-900 dark:text-theme-100;
   }
 
-  .article {
-    @apply mx-auto max-w-screen-xl px-4;
+  main {
+    @apply flex-1;
   }
 
   .article a {
     @apply font-bold underline duration-200 hover:brightness-75;
-  }
-
-  .article h1 {
-    @apply mx-auto mb-12 max-w-2xl text-center text-5xl font-bold;
   }
 
   .article h2 {
@@ -32,11 +28,11 @@
   }
 
   .article p {
-    @apply mb-4;
+    @apply mb-4 text-lg;
   }
 
   .article pre {
-    @apply mb-6 grid overflow-x-auto rounded-md border-[1px] border-zinc-600 bg-zinc-200 px-4 py-2 font-mono font-bold leading-tight;
+    @apply relative mb-6 grid overflow-x-auto rounded-md border-[1px] border-theme-700 bg-theme-200 px-4 py-2 font-mono font-bold leading-tight after:absolute after:right-2 after:top-2 after:text-xs after:text-theme-700 after:content-[attr(data-language)] dark:border-theme-300 dark:bg-theme-950;
   }
 
   .article pre code {
@@ -44,11 +40,11 @@
   }
 
   .article code {
-    @apply rounded border bg-zinc-200 px-2 font-mono text-sm text-zinc-900;
+    @apply rounded bg-theme-500 px-2 font-mono text-sm dark:text-theme-300;
   }
 
   .article blockquote {
-    @apply mb-6 border-l-4 pl-4 italic brightness-75;
+    @apply mb-6 border-l-4 border-theme-900 pl-4 italic opacity-50 dark:border-theme-300;
   }
 
   .article figure {
